--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,13 @@ body a {
     outline: none;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
+
 h1,
 h2,
 h3,
