--- a/css/style.css
+++ b/css/style.css
@@ -1915,10 +1915,12 @@ h2.typoh2 {
         display: none;
     }*/
 
-    .hdr-mobile {
+      .hdr-w3left_mobile{
        /* display: none;*/
-       width: 126px;
+       width: 90px;
        height: 50px;
+       margin-left: -6em;
+       margin-bottom: -2em;
      
     }
   .hdr-w3left {
@@ -2095,7 +2097,7 @@ media (min-width: 768px) .container {
 
 @media (min-width: 1280px) {
     .hdr-mobile {
-        display: none;
+   /*     display: none;*/
     }
 
 }
@@ -2494,8 +2496,14 @@ media (min-width: 768px) .container {
 
 @media(max-width:1280px) {
 
-           .hdr-mobile {
-        display: none;
+    .hdr-w3left_mobile{
+       /* display: none;*/
+       width: 60px;
+       height: 40px;
+       margin-left: -1m;
+       margin-top: -3em;
+     
+        }
     }
 
 
